Added Java 1.7 support using different libraries to format the http date and base64 encode/decode.